// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalysisController (full pipeline golden set) renders the enriched semantic graph end-to-end through embedding fetch and Pass B LLM labelling 1`] = `
{
  "edges": [
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::link",
        "source": "11111111111111111111111111111111",
        "target": "22222222222222222222222222222222",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::33333333333333333333333333333333::link",
        "source": "11111111111111111111111111111111",
        "target": "33333333333333333333333333333333",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "22222222222222222222222222222222::33333333333333333333333333333333::link",
        "source": "22222222222222222222222222222222",
        "target": "33333333333333333333333333333333",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::44444444444444444444444444444444::link",
        "source": "11111111111111111111111111111111",
        "target": "44444444444444444444444444444444",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::tag",
        "source": "11111111111111111111111111111111",
        "tagName": "project",
        "target": "22222222222222222222222222222222",
        "type": "tag",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::44444444444444444444444444444444::tag",
        "source": "11111111111111111111111111111111",
        "tagName": "todo",
        "target": "44444444444444444444444444444444",
        "type": "tag",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::semantic",
        "relationshipLabel": "both list watering schedules",
        "score": 1.15,
        "source": "11111111111111111111111111111111",
        "target": "22222222222222222222222222222222",
        "type": "semantic",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::44444444444444444444444444444444::semantic",
        "score": 0.15000000000000002,
        "source": "11111111111111111111111111111111",
        "target": "44444444444444444444444444444444",
        "type": "semantic",
      },
    },
    {
      "data": {
        "id": "22222222222222222222222222222222::44444444444444444444444444444444::semantic",
        "score": 0.1,
        "source": "22222222222222222222222222222222",
        "target": "44444444444444444444444444444444",
        "type": "semantic",
      },
    },
    {
      "data": {
        "id": "33333333333333333333333333333333::44444444444444444444444444444444::semantic",
        "relationshipLabel": "expands the retry logic",
        "score": 0.6000000000000001,
        "source": "33333333333333333333333333333333",
        "target": "44444444444444444444444444444444",
        "type": "semantic",
      },
    },
  ],
  "nodes": [
    {
      "data": {
        "category": "Gardening",
        "community": 0,
        "degree": 7,
        "id": "11111111111111111111111111111111",
        "label": "Alpha Note",
        "noteId": "11111111111111111111111111111111",
        "size": 10,
      },
    },
    {
      "data": {
        "category": "Gardening",
        "community": 0,
        "degree": 5,
        "id": "22222222222222222222222222222222",
        "label": "Beta",
        "noteId": "22222222222222222222222222222222",
        "size": 7,
      },
    },
    {
      "data": {
        "category": "Cooking",
        "community": 0,
        "degree": 3,
        "id": "33333333333333333333333333333333",
        "label": "Gamma",
        "noteId": "33333333333333333333333333333333",
        "size": 2,
      },
    },
    {
      "data": {
        "category": "Gardening",
        "community": 0,
        "degree": 5,
        "id": "44444444444444444444444444444444",
        "label": "Delta",
        "noteId": "44444444444444444444444444444444",
        "size": 6,
      },
    },
  ],
}
`;

exports[`AnalysisController (full pipeline golden set) renders the structural graph end-to-end from notes fetched and enriched through the Joplin API 1`] = `
{
  "allNotesVeryShort": false,
  "edges": [
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::link",
        "source": "11111111111111111111111111111111",
        "target": "22222222222222222222222222222222",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::33333333333333333333333333333333::link",
        "source": "11111111111111111111111111111111",
        "target": "33333333333333333333333333333333",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "22222222222222222222222222222222::33333333333333333333333333333333::link",
        "source": "22222222222222222222222222222222",
        "target": "33333333333333333333333333333333",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::44444444444444444444444444444444::link",
        "source": "11111111111111111111111111111111",
        "target": "44444444444444444444444444444444",
        "type": "link",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::22222222222222222222222222222222::tag",
        "source": "11111111111111111111111111111111",
        "tagName": "project",
        "target": "22222222222222222222222222222222",
        "type": "tag",
      },
    },
    {
      "data": {
        "id": "11111111111111111111111111111111::44444444444444444444444444444444::tag",
        "source": "11111111111111111111111111111111",
        "tagName": "todo",
        "target": "44444444444444444444444444444444",
        "type": "tag",
      },
    },
  ],
  "nodes": [
    {
      "data": {
        "community": 0,
        "degree": 5,
        "id": "11111111111111111111111111111111",
        "label": "Alpha Note",
        "noteId": "11111111111111111111111111111111",
        "size": 10,
      },
    },
    {
      "data": {
        "community": 0,
        "degree": 3,
        "id": "22222222222222222222222222222222",
        "label": "Beta",
        "noteId": "22222222222222222222222222222222",
        "size": 6,
      },
    },
    {
      "data": {
        "community": 0,
        "degree": 2,
        "id": "33333333333333333333333333333333",
        "label": "Gamma",
        "noteId": "33333333333333333333333333333333",
        "size": 1,
      },
    },
    {
      "data": {
        "community": 0,
        "degree": 2,
        "id": "44444444444444444444444444444444",
        "label": "Delta",
        "noteId": "44444444444444444444444444444444",
        "size": 1,
      },
    },
  ],
}
`;
